--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<!--call in the time.js file-->
+<!--link in the time.js file(want it to run in the background without any user interaction)-->
 
 
 
