--- a/code.html
+++ b/code.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 <!--link in the time.js file(want it to run in the background without any user interaction)-->
-
+<div id=clock>
+   
+  
+  </div>
 
 
 
