--- a/code.html
+++ b/code.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <!--link in the time.js file(want it to run in the background without any user interaction)-->
+<link rel="stylesheet" href="style.css">   
+<!--link in the style.css file(goind to have sevrel so they can decide which one they want, default is black, but they can load others.)   
+
 <div id=clock>
    
   
